docs/0.19/_sources/api/gammapy.modeling.Parameter.rst.txt
Parameter
=========

.. currentmodule:: gammapy.modeling

.. autoclass:: Parameter
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Parameter.conf_max
      ~Parameter.conf_min
      ~Parameter.error
      ~Parameter.factor
      ~Parameter.factor_max
      ~Parameter.factor_min
      ~Parameter.frozen
      ~Parameter.max
      ~Parameter.min
      ~Parameter.name
      ~Parameter.quantity
      ~Parameter.scale
      ~Parameter.scale_method
      ~Parameter.scan_max
      ~Parameter.scan_min
      ~Parameter.scan_n_sigma
      ~Parameter.scan_values
      ~Parameter.type
      ~Parameter.unit
      ~Parameter.value

   .. rubric:: Methods Summary

   .. autosummary::

      ~Parameter.autoscale
      ~Parameter.check_limits
      ~Parameter.copy
      ~Parameter.to_dict
      ~Parameter.update_from_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: conf_max
   .. autoattribute:: conf_min
   .. autoattribute:: error
   .. autoattribute:: factor
   .. autoattribute:: factor_max
   .. autoattribute:: factor_min
   .. autoattribute:: frozen
   .. autoattribute:: max
   .. autoattribute:: min
   .. autoattribute:: name
   .. autoattribute:: quantity
   .. autoattribute:: scale
   .. autoattribute:: scale_method
   .. autoattribute:: scan_max
   .. autoattribute:: scan_min
   .. autoattribute:: scan_n_sigma
   .. autoattribute:: scan_values
   .. autoattribute:: type
   .. autoattribute:: unit
   .. autoattribute:: value

   .. rubric:: Methods Documentation

   .. automethod:: autoscale
   .. automethod:: check_limits
   .. automethod:: copy
   .. automethod:: to_dict
   .. automethod:: update_from_dict
