docs/2.1/_sources/api/gammapy.modeling.Parameter.rst.txt
Parameter
=========

.. currentmodule:: gammapy.modeling

.. autoclass:: Parameter
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Parameter.conf_max
      ~Parameter.conf_min
      ~Parameter.error
      ~Parameter.factor
      ~Parameter.factor_max
      ~Parameter.factor_min
      ~Parameter.frozen
      ~Parameter.max
      ~Parameter.min
      ~Parameter.name
      ~Parameter.prior
      ~Parameter.quantity
      ~Parameter.scale
      ~Parameter.scale_method
      ~Parameter.scale_transform
      ~Parameter.scan_max
      ~Parameter.scan_min
      ~Parameter.scan_n_sigma
      ~Parameter.scan_values
      ~Parameter.type
      ~Parameter.unit
      ~Parameter.value

   .. rubric:: Methods Summary

   .. autosummary::

      ~Parameter.autoscale
      ~Parameter.check_limits
      ~Parameter.copy
      ~Parameter.inverse_transform
      ~Parameter.prior_stat_sum
      ~Parameter.reset_autoscale
      ~Parameter.set_lim
      ~Parameter.to_dict
      ~Parameter.transform
      ~Parameter.update_from_dict
      ~Parameter.update_scale

   .. rubric:: Attributes Documentation

   .. autoattribute:: conf_max
   .. autoattribute:: conf_min
   .. autoattribute:: error
   .. autoattribute:: factor
   .. autoattribute:: factor_max
   .. autoattribute:: factor_min
   .. autoattribute:: frozen
   .. autoattribute:: max
   .. autoattribute:: min
   .. autoattribute:: name
   .. autoattribute:: prior
   .. autoattribute:: quantity
   .. autoattribute:: scale
   .. autoattribute:: scale_method
   .. autoattribute:: scale_transform
   .. autoattribute:: scan_max
   .. autoattribute:: scan_min
   .. autoattribute:: scan_n_sigma
   .. autoattribute:: scan_values
   .. autoattribute:: type
   .. autoattribute:: unit
   .. autoattribute:: value

   .. rubric:: Methods Documentation

   .. automethod:: autoscale
   .. automethod:: check_limits
   .. automethod:: copy
   .. automethod:: inverse_transform
   .. automethod:: prior_stat_sum
   .. automethod:: reset_autoscale
   .. automethod:: set_lim
   .. automethod:: to_dict
   .. automethod:: transform
   .. automethod:: update_from_dict
   .. automethod:: update_scale
